correct copy + paste on wayland, added gitignore

--- a/proompt/Cargo.toml
+++ b/proompt/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3", features = ["derive"] }
 globset = "0.4"
-arboard = "2.0"
+copypasta-ext = { version = "0.4.4", default-features = false, features = [
+    "wayland-bin",
+] }
+ignore = "0.4"
