--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
+      working-directory: proompt
       run: cargo build --verbose
     - name: Run tests
+      working-directory: proompt
       run: cargo test --verbose
